// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`将棋盤が初期化されているか 1`] = `
PieceBoard [
  Array [
    Piece {
      "isPromote": false,
      "owner": "white",
      "type": "lance",
    },
    Piece {
      "isPromote": false,
      "owner": "white",
      "type": "knight",
    },
    Piece {
      "isPromote": false,
      "owner": "white",
      "type": "silver-general",
    },
    Piece {
      "isPromote": false,
      "owner": "white",
      "type": "gold-general",
    },
    Piece {
      "isPromote": false,
      "owner": "white",
      "type": "king",
    },
    Piece {
      "isPromote": false,
      "owner": "white",
      "type": "gold-general",
    },
    Piece {
      "isPromote": false,
      "owner": "white",
      "type": "silver-general",
    },
    Piece {
      "isPromote": false,
      "owner": "white",
      "type": "knight",
    },
    Piece {
      "isPromote": false,
      "owner": "white",
      "type": "lance",
    },
  ],
  Array [
    null,
    Piece {
      "isPromote": false,
      "owner": "white",
      "type": "rook",
    },
    null,
    null,
    null,
    null,
    null,
    Piece {
      "isPromote": false,
      "owner": "white",
      "type": "bishop",
    },
    null,
  ],
  Array [
    Piece {
      "isPromote": false,
      "owner": "white",
      "type": "pawn",
    },
    Piece {
      "isPromote": false,
      "owner": "white",
      "type": "pawn",
    },
    Piece {
      "isPromote": false,
      "owner": "white",
      "type": "pawn",
    },
    Piece {
      "isPromote": false,
      "owner": "white",
      "type": "pawn",
    },
    Piece {
      "isPromote": false,
      "owner": "white",
      "type": "pawn",
    },
    Piece {
      "isPromote": false,
      "owner": "white",
      "type": "pawn",
    },
    Piece {
      "isPromote": false,
      "owner": "white",
      "type": "pawn",
    },
    Piece {
      "isPromote": false,
      "owner": "white",
      "type": "pawn",
    },
    Piece {
      "isPromote": false,
      "owner": "white",
      "type": "pawn",
    },
  ],
  Array [
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
  ],
  Array [
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
  ],
  Array [
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
  ],
  Array [
    Piece {
      "isPromote": false,
      "owner": "black",
      "type": "pawn",
    },
    Piece {
      "isPromote": false,
      "owner": "black",
      "type": "pawn",
    },
    Piece {
      "isPromote": false,
      "owner": "black",
      "type": "pawn",
    },
    Piece {
      "isPromote": false,
      "owner": "black",
      "type": "pawn",
    },
    Piece {
      "isPromote": false,
      "owner": "black",
      "type": "pawn",
    },
    Piece {
      "isPromote": false,
      "owner": "black",
      "type": "pawn",
    },
    Piece {
      "isPromote": false,
      "owner": "black",
      "type": "pawn",
    },
    Piece {
      "isPromote": false,
      "owner": "black",
      "type": "pawn",
    },
    Piece {
      "isPromote": false,
      "owner": "black",
      "type": "pawn",
    },
  ],
  Array [
    null,
    Piece {
      "isPromote": false,
      "owner": "black",
      "type": "bishop",
    },
    null,
    null,
    null,
    null,
    null,
    Piece {
      "isPromote": false,
      "owner": "black",
      "type": "rook",
    },
    null,
  ],
  Array [
    Piece {
      "isPromote": false,
      "owner": "black",
      "type": "lance",
    },
    Piece {
      "isPromote": false,
      "owner": "black",
      "type": "knight",
    },
    Piece {
      "isPromote": false,
      "owner": "black",
      "type": "silver-general",
    },
    Piece {
      "isPromote": false,
      "owner": "black",
      "type": "gold-general",
    },
    Piece {
      "isPromote": false,
      "owner": "black",
      "type": "king",
    },
    Piece {
      "isPromote": false,
      "owner": "black",
      "type": "gold-general",
    },
    Piece {
      "isPromote": false,
      "owner": "black",
      "type": "silver-general",
    },
    Piece {
      "isPromote": false,
      "owner": "black",
      "type": "knight",
    },
    Piece {
      "isPromote": false,
      "owner": "black",
      "type": "lance",
    },
  ],
]
`;

exports[`将棋盤を文字列に変換・逆変換できるか 1`] = `"1,,,110-210-310-410-710-410-310-210-110,_-610-_-500-_-_-_-501-_,010-_-010-010-010-010-_-010-010,_-010-_-_-_-_-010-_-_,_-_-_-_-_-_-_-_-_,_-_-000-_-_-_-_-_-_,000-000-_-000-000-000-000-000-000,_-_-_-_-_-_-_-600-_,100-200-300-400-700-400-300-200-100"`;

exports[`将棋盤を表示できるか 1`] = `"(香)(桂)(銀)(金)(玉)(金)(銀)(桂)(香) 　 (飛) 　  角  　  　  　  馬  　 (歩) 　 (歩)(歩)(歩)(歩) 　 (歩)(歩) 　 (歩) 　  　  　  　 (歩) 　  　  　  　  　  　  　  　  　  　  　  　  　  歩  　  　  　  　  　  　  歩  歩  　  歩  歩  歩  歩  歩  歩  　  　  　  　  　  　  　  飛  　  香  桂  銀  金  王  金  銀  桂  香 "`;

exports[`正しく駒を動かせているか 1`] = `
PieceBoard [
  Array [
    Piece {
      "isPromote": false,
      "owner": "white",
      "type": "lance",
    },
    Piece {
      "isPromote": false,
      "owner": "white",
      "type": "knight",
    },
    Piece {
      "isPromote": false,
      "owner": "white",
      "type": "silver-general",
    },
    Piece {
      "isPromote": false,
      "owner": "white",
      "type": "gold-general",
    },
    Piece {
      "isPromote": false,
      "owner": "white",
      "type": "king",
    },
    Piece {
      "isPromote": false,
      "owner": "white",
      "type": "gold-general",
    },
    Piece {
      "isPromote": false,
      "owner": "white",
      "type": "silver-general",
    },
    Piece {
      "isPromote": false,
      "owner": "white",
      "type": "knight",
    },
    Piece {
      "isPromote": false,
      "owner": "white",
      "type": "lance",
    },
  ],
  Array [
    null,
    Piece {
      "isPromote": false,
      "owner": "white",
      "type": "rook",
    },
    null,
    Piece {
      "isPromote": false,
      "owner": "black",
      "type": "bishop",
    },
    null,
    null,
    null,
    Piece {
      "isPromote": true,
      "owner": "black",
      "type": "bishop",
    },
    null,
  ],
  Array [
    Piece {
      "isPromote": false,
      "owner": "white",
      "type": "pawn",
    },
    null,
    Piece {
      "isPromote": false,
      "owner": "white",
      "type": "pawn",
    },
    Piece {
      "isPromote": false,
      "owner": "white",
      "type": "pawn",
    },
    Piece {
      "isPromote": false,
      "owner": "white",
      "type": "pawn",
    },
    Piece {
      "isPromote": false,
      "owner": "white",
      "type": "pawn",
    },
    null,
    Piece {
      "isPromote": false,
      "owner": "white",
      "type": "pawn",
    },
    Piece {
      "isPromote": false,
      "owner": "white",
      "type": "pawn",
    },
  ],
  Array [
    null,
    Piece {
      "isPromote": false,
      "owner": "white",
      "type": "pawn",
    },
    null,
    null,
    null,
    null,
    Piece {
      "isPromote": false,
      "owner": "white",
      "type": "pawn",
    },
    null,
    null,
  ],
  Array [
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
  ],
  Array [
    null,
    null,
    Piece {
      "isPromote": false,
      "owner": "black",
      "type": "pawn",
    },
    null,
    null,
    null,
    null,
    null,
    null,
  ],
  Array [
    Piece {
      "isPromote": false,
      "owner": "black",
      "type": "pawn",
    },
    Piece {
      "isPromote": false,
      "owner": "black",
      "type": "pawn",
    },
    null,
    Piece {
      "isPromote": false,
      "owner": "black",
      "type": "pawn",
    },
    Piece {
      "isPromote": false,
      "owner": "black",
      "type": "pawn",
    },
    Piece {
      "isPromote": false,
      "owner": "black",
      "type": "pawn",
    },
    Piece {
      "isPromote": false,
      "owner": "black",
      "type": "pawn",
    },
    Piece {
      "isPromote": false,
      "owner": "black",
      "type": "pawn",
    },
    Piece {
      "isPromote": false,
      "owner": "black",
      "type": "pawn",
    },
  ],
  Array [
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    Piece {
      "isPromote": false,
      "owner": "black",
      "type": "rook",
    },
    null,
  ],
  Array [
    Piece {
      "isPromote": false,
      "owner": "black",
      "type": "lance",
    },
    Piece {
      "isPromote": false,
      "owner": "black",
      "type": "knight",
    },
    Piece {
      "isPromote": false,
      "owner": "black",
      "type": "silver-general",
    },
    Piece {
      "isPromote": false,
      "owner": "black",
      "type": "gold-general",
    },
    Piece {
      "isPromote": false,
      "owner": "black",
      "type": "king",
    },
    Piece {
      "isPromote": false,
      "owner": "black",
      "type": "gold-general",
    },
    Piece {
      "isPromote": false,
      "owner": "black",
      "type": "silver-general",
    },
    Piece {
      "isPromote": false,
      "owner": "black",
      "type": "knight",
    },
    Piece {
      "isPromote": false,
      "owner": "black",
      "type": "lance",
    },
  ],
]
`;
